--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,13 @@ dependencies {
     compile('org.apache.tomcat.embed:tomcat-embed-jasper')
     compile('javax.servlet:jstl:1.2')
     compile("org.springframework.boot:spring-boot-devtools")
+    
+    // 메일 보내기
+    compile("org.springframework.boot:spring-boot-starter-mail")
+    compile "org.springframework:spring-context-support"
+    compile "com.sun.mail:javax.mail:1.6.2"
+
+
 }
 
 test {
