--- a/build.gradle
+++ b/build.gradle
@@ -49,3 +49,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+task print() {
+    doLast {
+        println "Github push complete"
+    }
+}
