--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,12 @@ dependencies {
     compile "com.sun.mail:javax.mail:1.6.2"
 
 
+    // Security + DB + JPA
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'mysql:mysql-connector-java'
+
 }
 
 test {
