--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,14 @@ spring.http.encoding.force=true
 server.port = 80
 
 #Database
-spring.datasource.url=jdbc:mysql://49.50.165.81:3306/jhgallery?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://49.50.165.81:3306/jhgallery?serverTimezone=Asia/Seoul
 spring.datasource.username=janghyeon
 spring.datasource.password=kk6532pu
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
 
 #MyBatis
 #logging.level.kr.co.photograph.jhgallery.mapper=TRACE
