--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.url=jdbc:mysql://49.50.165.81:3306/jhgallery?serverTimezone=As
 spring.datasource.username=janghyeon
 spring.datasource.password=kk6532pu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.default_schema = jhgallery
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.hibernate.ddl-auto=create
