--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
-server.port = 80
+server.port = 8080
 
 #Database
 spring.datasource.url=jdbc:mysql://49.50.165.81:3306/jhgallery?serverTimezone=Asia/Seoul
@@ -15,7 +15,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.default_schema = jhgallery
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 #MyBatis
