--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.mvc.view.prefix:/WEB-INF/views/
-spring.mvc.view.suffix:.jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
 spring.devtools.livereload.enabled=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
