FlickrApi 추가  - searchByUserId() : userID로 flickr 서버에서 image 검색  - getImages(String option) : option(large, medium) 선택해서 imageURL을 ArrayList<String>에 담아서 return

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,13 @@ dependencies {
     implementation 'org.springframework.security:spring-security-taglibs'
     runtimeOnly 'mysql:mysql-connector-java'
 
+    // Cookies
+    compile 'org.springframework.session:spring-session-core'
+
+    // flickr4java
+    compile 'com.flickr4java:flickr4java:3.0.2'
+    compile 'com.github.scribejava:scribejava-apis'
+
 }
 
 test {
