미사용 class 삭제 / 주요 서비스 인터페이스, 구현체로 분리 / 업로드 보안 인증 추가 /

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,16 @@ spring.http.encoding.force=true
 server.port = 80
 
 #Database
-spring.jpa.properties.hibernate.default_schema = jhgallery
+#spring.jpa.properties.hibernate.default_schema = users
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+#h2
+spring.datasource.url=jdbc:h2:tcp://localhost:9092/~/h2;MODE=MySQL;
+spring.jpa.hibernate.ddl-auto=create
 
 #MyBatis
 #logging.level.kr.co.photograph.jhgallery.mapper=TRACE
