--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'org.springframework.security:spring-security-taglibs'
     runtimeOnly 'mysql:mysql-connector-java'
 
+
     // Cookies
     compile 'org.springframework.session:spring-session-core'
 
@@ -64,6 +65,14 @@ dependencies {
     // MyBatis
     compile 'org.mybatis:mybatis:3.3.0'
     compile "org.mybatis:mybatis-spring:1.2.3"
+
+    // h2
+    implementation 'com.h2database:h2:2.0.202'
+
+    // Junit
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter:5.8.1'
+
 }
 
 test {
