jsp를 thymeleaf로 리팩토링

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+#JSP ?? ??
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
+#spring.thymeleaf.enabled=false
+#JSP ?? ?
+
+#thymeleaf ??
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/thymeleaf/views/
+spring.thymeleaf.suffix=.html
+#thymeleaf ?
+
 spring.devtools.livereload.enabled=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
@@ -21,4 +31,5 @@ spring.jpa.hibernate.ddl-auto=create
 
 #MyBatis
 #logging.level.kr.co.photograph.jhgallery.mapper=TRACE
+
 
