사진 업로드 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,4 +32,7 @@ spring.jpa.hibernate.ddl-auto=create
 #MyBatis
 #logging.level.kr.co.photograph.jhgallery.mapper=TRACE
 
+#Upload File
+upload.photo.dir=/Users/janghyeon/WebProject/photo_repo/
+spring.servlet.multipart.max-file-size=30MB
 
